fix: adjust banner/footer templates
- changed layout and color scheme of header and
footer based on feedback from the group
- cropped logo files to remove whitespace
- added new colors to CSS notes

--- a/static/css/cbe-styles.css
+++ b/static/css/cbe-styles.css
@@ -8,8 +8,7 @@ body {
 /* HEADER Specific */
 
 header {
-    background-color: #0b2772;
-    color: white;
+    background-color: #fafafa;
     padding: 12px;
     border-bottom: 1px solid rgb(174, 176, 174);
 }
@@ -27,12 +26,13 @@ header {
 
 .cbe-header-logo img {
     max-height: 80px;
-    /* border: 1px solid grey;  */
+    /* border: 1px solid grey;  uncomment for layout viz */ 
 }
 
 .cbe-tool-title {
     font-size: 24pt;
     font-weight: bold;
+    color: #0c2772;
     /* border: 1px solid grey; */
 }
 
@@ -49,7 +49,7 @@ header {
 }
 
 .cbe-header-nav a {
-    color: white;
+    color: #3fbbec;
     text-decoration: none;
 }
 
@@ -62,16 +62,16 @@ header {
 /* FOOTER Specific */
 
 footer {
-    background-color: #0b2772;
     color: white;
-    padding: 12px;
-    padding-top: 20px;
-    padding-bottom: 0px;
 }
 
 .cbe-footer-content {
     display: flex;
-    align-items: end;
+    align-items: start;
+    background-color: #0077c2;
+    padding: 12px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     /* border: 1px solid grey;  */
 }
 
@@ -82,8 +82,12 @@ footer {
 } */
 
 .cbe-footer-logo {
-    width: 20%;
-    align-self: center;
+    width: 35%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px 35px;
+    justify-content: left;
+    /* align-self: center; */
     /* border: 1px solid grey; */
 }
 
@@ -97,11 +101,13 @@ footer {
 
 .cbe-footer-links {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 20px 40px;
-    width: 30%;
+    width: 15%;
+    padding-left: 50px;
     justify-content: space-around;
-    align-self: center;
+    /* align-self: center; */
     /* border: 1px solid grey;  */
 }
 
@@ -111,12 +117,13 @@ footer {
     width: 20%;
     gap: 10px 50px;
     justify-content: center;
-    align-self: center;
+    /* align-self: center; */
     /* border: 1px solid grey;  */
 }
 
 .cbe-footer-links a, cbe-footer-logo a {
     color: white;
+    font-size: 11pt;
     text-decoration: none;
 }
 
@@ -129,7 +136,7 @@ footer {
     padding-left: 50px;
     font-size: 10pt;
     width: 35%;
-    text-align: right;
+    text-align: start;
     /* border: 1px solid grey;  */
 }
 
@@ -141,11 +148,11 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0b2772;
-    color: white;
     height: 30px;
     font-size: 8pt;
-    padding-top: 20px;
+    background-color: #0c2772;
+    padding: 12px;
+    padding-top: 10px;
     padding-bottom: 5px;
 }
 
